<resources>
    <!-- XML Strings -->
    <string name="app_name">Movie Box</string>
    <string name="page1_title">Welcome to Movie Box</string>
    <string name="page2_title">Welcome to Movie Box2</string>
    <string name="page3_title">Welcome to Movie Box3</string>
    <string name="page3_skip">Geç</string>

    <!--  Login  -->
    <string name="login_login_text">Giriş</string>
    <string name="login_email">Email</string>
    <string name="login_password">Parola</string>
    <string name="login_login_button">Giriş yap</string>
    <string name="login_or_text">ya da</string>
    <string name="login_register_button">Kayıt ol</string>
    <string name="login_forgot_password">Şifremi unuttum?</string>

    <!--  Register  -->
    <string name="register_register_text">Kayıt Ol</string>
    <string name="register_name">Ad</string>
    <string name="register_surname">Soyad</string>
    <string name="register_email">Email</string>
    <string name="register_new_password">Yeni parola</string>
    <string name="register_password">Parola</string>
    <string name="register_password_apply">Parolayı onayla</string>
    <string name="register_register_button">Kayıt ol</string>

    <!--  Profile  -->
    <string name="profile_profile_text">Profil</string>
    <string name="profile_name">Ad</string>
    <string name="profile_surname">Soyad</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Hesap parolası</string>
    <string name="profile_new_password">Yeni parola</string>
    <string name="profile_logout">Çıkış yap</string>
    <string name="profile_update">Güncelle</string>

    <!--  Home   -->
    <string name="home_page_search">Ara</string>
    <string-array name="spinner_items">
        <item>Tümü</item>
        <item>Düşükten yükseğe</item>
        <item>Yüksekten düşüğe</item>
    </string-array>

    <!--  Details  -->
    <string name="details_share">Paylaş</string>

    <!-- Alert dialog strings -->
    <string name="alert_dialog_warn">Uyarı</string>
    <string name="alert_dialog_success">Başarılı</string>
    <string name="alert_dialog_error">Hata</string>
    <string name="alert_dialog_okay">Tamam</string>
    <string name="alert_dialog_empty_email">Lütfen şifresini unuttuğunuz emaili yukarıdaki email alanına giriniz.</string>
    <string name="alert_dialog_reset_mail_success">Sıfırlama maili başarıyla gönderildi. Lütfen emailinizi kontrol ediniz.</string>
    <string name="alert_dialog_empty_space">Lütfen boş alanları doldurunuz.</string>
    <string name="alert_dialog_update_empty_space">Lütfen boş alanları hesap parolası ile birlikte doldurunuz.</string>
    <string name="alert_dialog_update_profile_success">Bilgileriniz başarıyla güncellendi.</string>
    <string name="alert_dialog_password_doesnt_match">Parolalar eşleşmiyor.</string>
    <string name="alert_dialog_favorite_add_success">Başarıyla favorilere eklendi.</string>
    <string name="alert_dialog_favorite_remove_success">Başarıyla favorilerden kaldırıldı.</string>

    <!-- Bottom Navigation View strings -->
    <string name="menu_main_page">Ana Sayfa</string>
    <string name="menu_profile">Profil</string>

</resources>